:bug: fix:reglement lien pour index et contraste for test

--- a/css/contraste.css
+++ b/css/contraste.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-#toggleConst {
+#toggleConstr {
   width: 40px;
 }
 
